--- a/aula5/riodejaneiro.html
+++ b/aula5/riodejaneiro.html
@@ -11,7 +11,7 @@
         O Rio de Janeiro é uma grande cidade brasileira à beira-mar, famosa pelas praias de Copacabana e Ipanema, pela estátua de 38 metros de altura do Cristo Redentor, no topo do Corcovado, e pelo Pão de Açúcar, um pico de granito com teleféricos até seu cume. A cidade também é conhecida pelas grandes favelas. O empolgante Carnaval, com carros alegóricos, fantasias extravagantes e sambistas, é considerado o maior do mundo. 
     <p>
         <img src="RJ.png" alt="15px" style="width: 700px; height: 400px;">
-        <button style="padding: 60px 90px;"><a href="estados.html">voltar</a></button>
+        <a href="estados.html"><button style="padding: 60px 90px;">voltar</button></a>
     </p>
 </body>
 </html>
