--- a/aula5/saopaulo.html
+++ b/aula5/saopaulo.html
@@ -12,7 +12,7 @@
     </p>
     <p>
         <img src="SP.png" alt="15px" style="width: 700px; height: 400px;">
-        <button style="padding: 60px 90px;"><a href="estados.html">voltar</a></button>
+        <a href="estados.html"><button style="padding: 60px 90px; align-self:;" >voltar</button></a>
     </p>
 
 </body>
