--- a/aula5/estados.html
+++ b/aula5/estados.html
@@ -14,10 +14,35 @@
         <li><a href="riodejaneiro.html">rio de janeiro</a></li>
         <li><a href="minasgerais.html">minas gerais</a></li>
         <li><a href="espiritosanto.html">espirito santo</a></li>
+    
+    </ul>
+    <h3>Estados da região sul</h3>
+    <p>A Região Sul do Brasil é a menor das cinco regiões deste país lusófono sul-americano, com área territorial de 576 774,31 km², sendo maior que a área da França metropolitana e menor que o estado brasileiro de Minas</p>
+    <ul>
         <li><a href="santacatarina.html">santa catarina</a></li>
         <li><a href="parana.html">paraná</a></li>
         <li><a href="riograndesul.html">rio grande do sul</a></li>
     </ul>
-
+    <h3>Estados da região centro-oeste</h3>
+    <p>A Região Centro-Oeste do Brasil é uma das cinco regiões brasileiras definidas pelo IBGE em 1969. É formada por três estados: Goiás, Mato Grosso e Mato Grosso do Sul, mais o Distrito Federal, onde se localiza Brasília, a capital do país e a cidade mais populosa da região. </p>
+    <ul>
+        <li><a href="distrito.html">distrito federal</a></li>
+        <li><a href="goias.html">goias</a></li>
+        <li><a href="matogrosso.html">mato grosso</a></li>
+    </ul>
+    <h3>Estados da região norte</h3>
+    <p>O Norte é a maior região brasileira, possui sete estados e é o menor em quantitativo populacional. Faz fronteira com sete países e abrange 45% da área total do Brasil.</p>
+    <ul>
+        <li><a href="acre.html">acre</a></li>
+        <li><a href="amazonas.html">amazonas</a></li>
+        <li><a href="amapa.html"></a>amapa</li>
+    </ul>
+    <h3>Estados da região nordeste</h3>
+    <p>A Região Nordeste do Brasil é uma das cinco regiões do país, composta por nove estados: Alagoas, Bahia, Ceará, Maranhão, Paraíba, Pernambuco, Piauí, Rio Grande do Norte e Sergipe. É a região com o maior número de estados e a segunda mais populosa do Brasil. </p>
+    <ul>
+        <li><a href="alagoas.html">alagoas</a></li>
+        <li><a href="bahia.html">bahia</a></li>
+        <li><a href="ceara.html">ceara</a></li>
+    </ul>
 </body>
 </html>
