--- a/aula5/alagoas.html
+++ b/aula5/alagoas.html
@@ -6,12 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 >seja bem vindo ao estado de alagoas</h1>
-    <p>
-        Alagoas é um pequeno estado do nordeste brasileiro cujo litoral tropical é marcado por praias de areia branca repletas de palmeiras, lagoas cristalinas e recifes de corais. Em Maceió, sua capital, estão localizadas as famosas praias Pajuçara e Ponta Verde, com hotéis, bares e restaurantes. Os recifes de corais decoram o litoral ao norte de Maceió que, por isso, tem o apelido de Costa dos Corais
-    <p>
-        <img src="alagoas.jpg" alt="15px" style="width: 700px; height: 400px;">
-        <a href="estados.html"><button style="padding: 60px 90px;">voltar</button></a>
-    </p>
+    <h3>seja bem vindo a alagoas</h3>
+
+
+        <p>Alagoas é um pequeno estado do nordeste brasileiro cujo litoral tropical é marcado por praias de areia branca repletas de palmeiras, lagoas cristalinas e recifes de corais. Em Maceió, sua capital, estão localizadas as famosas praias Pajuçara e Ponta Verde, com hotéis, bares e restaurantes. Os recifes de corais decoram o litoral ao norte de Maceió que, por isso, tem o apelido de Costa dos Corais.</p>
+
+        <P><img src="maceio-alagoas.webp" alt=""></P>
 </body>
 </html>
