--- a/aula5/amazonas.html
+++ b/aula5/amazonas.html
@@ -6,12 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 >seja bem vindo ao estado de amazonas</h1>
-    <p>
-        Amazonas é um enorme estado no noroeste do Brasil, coberto quase na sua totalidade pela floresta tropical da Amazónia. A capital, Manaus, é um porto fluvial com pontos de referência que datam do ciclo da borracha de finais do século XIX, incluindo o Teatro Amazonas, uma grande casa de ópera. A cidade marca o "Encontro das Águas", onde o rio Negro, de água negra, e o rio Solimões se juntam para formar o rio Amazonas.
-    <p>
-        <img src="rio-amazonas-20060602-031.webp" alt="15px" style="width: 700px; height: 400px;">
-        <a href="estados.html"><button style="padding: 60px 90px;">voltar</button></a>
-    </p>
+    <h3>seja bem vindo ao amazonas</h3>
+
+    <P>Amazonas é um enorme estado no noroeste do Brasil, coberto quase na sua totalidade pela floresta tropical da Amazónia. A capital, Manaus, é um porto fluvial com pontos de referência que datam do ciclo da borracha de finais do século XIX, incluindo o Teatro Amazonas, uma grande casa de ópera. A cidade marca o "Encontro das Águas", onde o rio Negro, de água negra, e o rio Solimões se juntam para formar o rio Amazonas.</P>
+
+
+    <P><img src="licensed-image (4).jfif" alt=""></P>
 </body>
 </html>
