--- a/aula5/piaui.html
+++ b/aula5/piaui.html
@@ -6,12 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 >seja bem vindo ao estado de amapa</h1>
-    <p>
-        A Bahia é um estado do nordeste brasileiro com paisagens que variam da costa tropical até a aridez do Sertão. A capital, Salvador, é conhecida por seu centro histórico, o Pelourinho, com uma rica arquitetura colonial do século XVII e assentado sobre a Baía de Todos-os-Santos. O Carnaval da cidade reúne foliões fantasiados que dançam ao som do samba e do axé em uma enorme festa de rua.
-    <p>
-        <img src="bahia.jpg" alt="15px" style="width: 700px; height: 400px;">
-        <a href="estados.html"><button style="padding: 60px 90px;">voltar</button></a>
-    </p>
+    <h3>seja bem vindo ao piaui</h3>
+
+    <P>Piauí é um estado no nordeste do Brasil conhecido pelos parques nacionais. O Parque Nacional Serra da Capivara, no sudeste, possui sítios arqueológicos com pinturas rupestres pré-históricas. Nas proximidades, o Parque Nacional Serra das Confusões tem gigantescas formações rochosas e grandes áreas de caatinga (vegetação semiárida), onde vivem aves em risco de extinção. As mangueiras ladeiam as ruas da capital à beira-rio, Teresina.</P>
+
+    <P><img src="unnamed.jpg" alt=""></P>
+
 </body>
 </html>
