--- a/aula5/amapa.html
+++ b/aula5/amapa.html
@@ -6,12 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 >seja bem vindo ao estado de amapa</h1>
-    <p>
-        Amapá é um estado no norte do Brasil que faz fronteira com o Suriname, a Guiana Francesa e o Oceano Atlântico. A floresta amazónica abrange uma grande parte da sua área e o rio Oiapoque faz parte da sua fronteira a norte. No sul, a capital, Macapá, é conhecida pela Fortaleza de São José de Macapá, situada à beira-mar, um forte português do século XVIII, e pelo Monumento do Marco Zero, um obelisco que marca o equador.
-    <p>
-        <img src="macapa08.webp" alt="15px" style="width: 700px; height: 400px;">
-        <a href="estados.html"><button style="padding: 60px 90px;">voltar</button></a>
-    </p>
+    <h3>seja bem vindo ao amapa</h3>
+
+    <P>Amapá é um estado no norte do Brasil que faz fronteira com o Suriname, a Guiana Francesa e o Oceano Atlântico. A floresta amazónica abrange uma grande parte da sua área e o rio Oiapoque faz parte da sua fronteira a norte. No sul, a capital, Macapá, é conhecida pela Fortaleza de São José de Macapá, situada à beira-mar, um forte português do século XVIII, e pelo Monumento do Marco Zero, um obelisco que marca o equador. </P>
+
+    <P><img src="unnamed (1).jpg" alt=""></P>
 </body>
 </html>
