--- a/aula5/bahia.html
+++ b/aula5/bahia.html
@@ -6,12 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 >seja bem vindo ao estado de bahia</h1>
-    <p>
-        A Bahia é um estado do nordeste brasileiro com paisagens que variam da costa tropical até a aridez do Sertão. A capital, Salvador, é conhecida por seu centro histórico, o Pelourinho, com uma rica arquitetura colonial do século XVII e assentado sobre a Baía de Todos-os-Santos. O Carnaval da cidade reúne foliões fantasiados que dançam ao som do samba e do axé em uma enorme festa de rua.
-    <p>
-        <img src="bahia.jpg" alt="15px" style="width: 700px; height: 400px;">
-        <a href="estados.html"><button style="padding: 60px 90px;">voltar</button></a>
-    </p>
+    <h3>seja bem vindo a bahia</h3>
+<P>A Bahia é um estado do nordeste brasileiro com paisagens que variam da costa tropical até a aridez do Sertão. A capital, Salvador, é conhecida por seu centro histórico, o Pelourinho, com uma rica arquitetura colonial do século XVII e assentado sobre a Baía de Todos-os-Santos. O Carnaval da cidade reúne foliões fantasiados que dançam ao som do samba e do axé em uma enorme festa de rua</P>
+
+<P><img src="bahia_0.jpg" alt=""></P>
+
 </body>
 </html>
