--- a/aula5/estados.html
+++ b/aula5/estados.html
@@ -14,35 +14,62 @@
         <li><a href="riodejaneiro.html">rio de janeiro</a></li>
         <li><a href="minasgerais.html">minas gerais</a></li>
         <li><a href="espiritosanto.html">espirito santo</a></li>
-    
     </ul>
-    <h3>Estados da região sul</h3>
-    <p>A Região Sul do Brasil é a menor das cinco regiões deste país lusófono sul-americano, com área territorial de 576 774,31 km², sendo maior que a área da França metropolitana e menor que o estado brasileiro de Minas</p>
-    <ul>
-        <li><a href="santacatarina.html">santa catarina</a></li>
-        <li><a href="parana.html">paraná</a></li>
-        <li><a href="riograndesul.html">rio grande do sul</a></li>
-    </ul>
-    <h3>Estados da região centro-oeste</h3>
-    <p>A Região Centro-Oeste do Brasil é uma das cinco regiões brasileiras definidas pelo IBGE em 1969. É formada por três estados: Goiás, Mato Grosso e Mato Grosso do Sul, mais o Distrito Federal, onde se localiza Brasília, a capital do país e a cidade mais populosa da região. </p>
-    <ul>
-        <li><a href="distrito.html">distrito federal</a></li>
-        <li><a href="goias.html">goias</a></li>
-        <li><a href="matogrosso.html">mato grosso</a></li>
-    </ul>
-    <h3>Estados da região norte</h3>
-    <p>O Norte é a maior região brasileira, possui sete estados e é o menor em quantitativo populacional. Faz fronteira com sete países e abrange 45% da área total do Brasil.</p>
-    <ul>
-        <li><a href="acre.html">acre</a></li>
-        <li><a href="amazonas.html">amazonas</a></li>
-        <li><a href="amapa.html"></a>amapa</li>
-    </ul>
-    <h3>Estados da região nordeste</h3>
-    <p>A Região Nordeste do Brasil é uma das cinco regiões do país, composta por nove estados: Alagoas, Bahia, Ceará, Maranhão, Paraíba, Pernambuco, Piauí, Rio Grande do Norte e Sergipe. É a região com o maior número de estados e a segunda mais populosa do Brasil. </p>
-    <ul>
-        <li><a href="alagoas.html">alagoas</a></li>
-        <li><a href="bahia.html">bahia</a></li>
-        <li><a href="ceara.html">ceara</a></li>
-    </ul>
+ 
+    <h3>estados da região nordeste</h3>
+     
+ <P>A região Nordeste é a que possui mais estados entre as demais regiões brasileiras, sendo também a segunda mais populosa do país. Os seus estados são
+  
+  
+  <uL>
+
+ <lI><a href="bahia">bahia</a></lI>
+    <LI><a href="alagoas">alagoas</a></LI>
+    <LI><a href="ceará">ceará</a></LI>
+    <Li><a href="maranhão">maranhão</a></Li>
+    <LI><a href="paraiba">paraiba</a></LI>
+    <LI><a href="pernanbuco">pernanbuco</a></LI>
+    <LI><a href="piaui">piaui</a></LI>
+    <LI><a href="rio grande do norte">rio grande do norte</a></LI>
+    <LI><a href="sergipe">sergipe</a></LI>
+
+  </uL>
+
+  <h3>estados da região norte</h3>
+
+<P>
+    A região Norte é a maior entre as regiões brasileiras, apresenta as menores densidades demográficas e possui a importante função de abrigar a maior parte da Floresta Amazônica. É composta por sete Estados</P>
+
+
+ <uL>
+
+    <lI><a href="Acre">acre</a></lI>
+    <li><a href="amapa">amapa</a></li>
+    <lI><a href="amazonas">amazonas</a></lI>
+    <lI><a href="pará">pará</a></lI>
+    <LI><a href="rondonia">rondonia</a></LI>
+    <LI><a href="roraima">roraima</a></LI>
+    <LI><a href="tocantins">tocantins</a></LI>
+ </uL>
+
+ <h3>estados da região centro oeste</h3>
+
+<P>A Região Centro-Oeste do Brasil é uma das cinco regiões brasileiras definidas pelo IBGE em 1969. É formada por três estados: Goiás, Mato Grosso e Mato Grosso do Sul, mais o Distrito Federal, onde se localiza Brasília, a capital do país e a cidade mais populosa da região</P>
+
+<UL>
+
+    <LI><a href="goias">goias</a></LI>
+    <LI><a href="mato grosso">mato grosso</a></LI>
+    <LI><a href="mato grosso do sul">mato grosso do sul</a></LI>
+    <LI><a href="distrito federal">distrito federal</a></LI>
+
+</UL>
+
+<h3>estados da região sul</h3>
+
+<lI><a href="santacatarina.html">santa catarina"</a></lI>
+<LI><a href="parana.html">paraná"</a></LI>
+<LI><a href="riograndesul.html">rio grande do sul"</a></LI>
+
 </body>
 </html>
