--- a/aula5/paraiba.html
+++ b/aula5/paraiba.html
@@ -6,12 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 >seja bem vindo ao estado de amapa</h1>
-    <p>
-        A Bahia é um estado do nordeste brasileiro com paisagens que variam da costa tropical até a aridez do Sertão. A capital, Salvador, é conhecida por seu centro histórico, o Pelourinho, com uma rica arquitetura colonial do século XVII e assentado sobre a Baía de Todos-os-Santos. O Carnaval da cidade reúne foliões fantasiados que dançam ao som do samba e do axé em uma enorme festa de rua.
-    <p>
-        <img src="bahia.jpg" alt="15px" style="width: 700px; height: 400px;">
-        <a href="estados.html"><button style="padding: 60px 90px;">voltar</button></a>
-    </p>
+    <h3>seja bem vindo a paraiba</h3>
+
+    <p>Paraíba, um estado no nordeste do Brasil, é conhecido pela linha da costa tropical e pela arquitetura colonial portuguesa. A capital, João Pessoa, possui praias como a Manaíra e Tambaú, além de locais de mergulho repletos de corais ao largo da costa. Junto ao rio Paraíba, o centro histórico da cidade possui casas coloridas e a igreja de São Francisco, com uma arquitetura barroca. A Ponta do Seixas, com o farol Cabo Branco nas proximidades, marca o ponto mais a leste das Américas</p>
+
+  <p><img src="licensed-image.jfif" alt=""></p>
+
 </body>
 </html>
