--- a/aula5/santacatarina.html
+++ b/aula5/santacatarina.html
@@ -6,14 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 >seja bem vindo ao estado de santa catarina</h1>
-    <p>
-        Santa Catarina é um estado na região sul do Brasil. Com uma longa costa com o Atlântico e muitas ilhas, ela é conhecida por suas praias e montanhas. Florianópolis, a capital, tem um mercado público tradicional com bares, restaurantes e barracas de comida, além de um museu histórico instalado em um palácio do governo colonial do século 19. Florianópolis está basicamente na ilha de Santa Catarina, que conta com resorts de praia na extremidade norte. 
-    </p>
-    <p>
-        <img src="SC.png" alt="15px" style="width: 700px; height: 400px;">
-        <a href="estados.html"><button style="padding: 60px 90px;">voltar</button></a>
-    </p>
+    <h3>seja bem vindo a santa catarina</h3>
 
+    <P>Santa Catarina é um estado na região sul do Brasil. Com uma longa costa com o Atlântico e muitas ilhas, ela é conhecida por suas praias e montanhas. Florianópolis, a capital, tem um mercado público tradicional com bares, restaurantes e barracas de comida, além de um museu histórico instalado em um palácio do governo colonial do século 19. Florianópolis está basicamente na ilha de Santa Catarina, que conta com resorts de praia na extremidade norte. </P>
+    <P><img src="santa catarina.jfif" alt=""></P>
 </body>
 </html>
