--- a/aula5/sergipe.html
+++ b/aula5/sergipe.html
@@ -6,12 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 >seja bem vindo ao estado de amapa</h1>
-    <p>
-        A Bahia é um estado do nordeste brasileiro com paisagens que variam da costa tropical até a aridez do Sertão. A capital, Salvador, é conhecida por seu centro histórico, o Pelourinho, com uma rica arquitetura colonial do século XVII e assentado sobre a Baía de Todos-os-Santos. O Carnaval da cidade reúne foliões fantasiados que dançam ao som do samba e do axé em uma enorme festa de rua.
-    <p>
-        <img src="bahia.jpg" alt="15px" style="width: 700px; height: 400px;">
-        <a href="estados.html"><button style="padding: 60px 90px;">voltar</button></a>
-    </p>
+    <h3> seja bem vindo ao sergipe</h3>
+    <P>Sergipe, o estado mais pequeno do Brasil, situa-se na costa atlântica da região do nordeste. A capital, Aracaju, é conhecida pelas praias, tal como a Praia da Atalaia, com o seu longo passeio. Fundada em 1590, a antiga capital, São Cristóvão, alberga edifícios da era colonial, incluindo o convento e a Igreja de São Francisco, do século XVII. O Cânion do Xingó, no rio de São Francisco, ladeia um popular lago para passeios de barco</P>
+
+    <P><img src="licensed-image (3).jfif" alt=""></P>
+
 </body>
 </html>
