--- a/aula6/exercicio1aula6.html
+++ b/aula6/exercicio1aula6.html
@@ -8,7 +8,7 @@
         table, th, td
         {
             font-size: larger;
-            grid: 800px 650px;
+            text-align: center;
         }
         table
         {
@@ -16,6 +16,7 @@
             border-color: green;
             border-collapse: collapse;
             padding: 5px;
+
 
         }
         th
